# gentry

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  build.sh  docker-compose.yml  main.py  mypy.ini  pyproject.toml  requirements.txt  run.sh  setup.py
docker/: Dockerfile.alpine  Dockerfile.debian
poems/: main.py
poems/app/: poem.py
poems/test/app/: test_poem.py
scripts/: build.sh  format.sh  lint  lint.sh  run  test  test.sh
src/api/templates/: poem.html
src/app/: poem.py
src/autopoetry/: main.py  settings.py
src/autopoetry/models/: poem.py
src/autopoetry/static/: styles.css
src/autopoetry/templates/: poem.html
src/gentry/: main.py
src/poems/: main.py
src/poems/models/: poem.py
src/poems/static/: styles.css
src/poems/templates/: poem.html
test/app/: test_poem.py
tests/unit/: test_main.py
tests/unit/models/: test_poem.py
