[tool.poetry]
name = "poems"
version = "0.1.0"
description = "Automagically generate poems."
license = "Proprietary"
authors = ["Stijn de Gooijer <stijndegooijer@gmail.com>"]
repository = "https://gitlab.com/stinodego/poems"
packages = [
    { include = "poems", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.59.0"
uvicorn = "^0.11.6"
jinja2 = "^2.11.2"
aiofiles = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-mock = "^3.2.0"
pytest-cov = "^2.10.0"
requests = "^2.24.0"
flake8 = "^3.8.3"
black = "^19.10b0"
isort = "^5.1.2"
autoflake = "^1.3.1"
mypy = "^0.782"
pre-commit = "^2.6.0"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
