[tool.poetry]
name = "autopoetry"
version = "0.1.0"
description = "Automagically generate poems."
license = "Proprietary"
authors = ["Stijn de Gooijer <stijn@degooijer.io>"]
repository = "https://gitlab.com/stinodego/autopoetry"
packages = [
    { include = "autopoetry", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
aiofiles = "^0.6.0"
gunicorn = "^20.0.4"
Jinja2 = "^2.11.3"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
requests = "^2.25.1"
flake8 = "^3.9.0"
black = "^20.8b1"
isort = "^5.7.0"
mypy = "^0.812"
coverage = {extras = ["toml"], version = "^5.5"}
pytest = "^6.2.2"
pytest-mock = "^3.5.1"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage]
    [tool.coverage.run]
    source = ["src"]
    branch = true
    [tool.coverage.report]
    fail_under = 100
    skip_covered = true
    show_missing = true
    exclude_lines = [
        "if __name__ == .__main__.:",
    ]

[build-system]
requires = ["poetry_core>=1.0.10"]
build-backend = "poetry.core.masonry.api"
